--- a/Carmax/core/static/core/css/header.css
+++ b/Carmax/core/static/core/css/header.css
@@ -5,8 +5,8 @@ header{
     width: 100%;
     position: relative;
     z-index: 1;
-    -webkit-box-shadow: 0px 14px 10px -6px #ffa600;
-    box-shadow: 0px 14px 10px -6px #ffa600;
+   /* -webkit-box-shadow: 0px 14px 10px -6px #ffa600;
+    box-shadow: 0px 14px 10px -6px #ffa600;*/
 }
 .container{
     width: 90%;
@@ -37,3 +37,7 @@ header{
     font-family: "Open Sans", sans-serif;
     color: white;
 }
+.navigation a, a:link, a:visited, a:focus, a:hover, a:active{
+    color:white;
+    text-decoration:none; 
+  }
