--- a/Carmax/registration/static/registration/css/signup.css
+++ b/Carmax/registration/static/registration/css/signup.css
@@ -2,7 +2,7 @@
     background: url(../img/login-background.jpg) no-repeat center center;
     position: sticky;
     background-size: cover;
-    min-height: 80vh;
+    min-height: 90vh;
     min-width: 100%;
     display: flex;
     flex-direction: column;
@@ -15,11 +15,8 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    width: 23em;
-    height: 33em;
     background: #10143A;
     border: 1px solid black
-
 }
 .registration-box h3{
     margin-top: 3%;
@@ -33,35 +30,30 @@
 }
 .registration-box input {
 margin-bottom: 5%;
-width: 80%;
+width: 95%;
 }
-.registration-box input[type="text"],
-.registration-box input[type="password"] {
-border: none;
-background: transparent;
-border-bottom: 1px solid #fff;
-outline: none;
-height: 40px;
-color: white;
-font-size: 1em;
+.registration-box ul {
+    list-style: none;
+}
+.registration-box input[type="text"], .registration-box input[type="email"], .registration-box input[type="password"] {
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    height: 40px;
+    color: white;
+    font-size: 1em;
+}
+.registration-box input::placeholder{
+    justify-content: center;
+    text-align: center;
 }
 .registration-box input[type="submit"] {
-background-color: blue;
-color: white;
-border: none;
-outline: none;
-height: 2.5em;
-font-size: 1.2em;
-border-radius: 20px;
-}
-
-.registration-box a {
-    text-decoration: none;
-    font-size: 0.8em;
-    line-height: 2em;
-    color: darkgrey
-}
-
-.registration-box a:hover {
-   color: white
+    background-color: blue;
+    color: white;
+    border: none;
+    outline: none;
+    height: 2.5em;
+    font-size: 1.2em;
+    border-radius: 20px;
 }
