--- a/Carmax/core/templates/core/base.html
+++ b/Carmax/core/templates/core/base.html
@@ -13,7 +13,7 @@
     <link href="{% static 'core/css/footer.css' %}" rel="stylesheet">
     <link href="{% static 'core/css/nosotros.css' %}" rel="stylesheet">
     <link href="{% static 'core/css/servicios.css' %}" rel="stylesheet">
-    <link href="{% static 'registration/css/signup.css' %}" rel="stylesheet">
+    <link href="{% static 'registration/css/registration.css' %}" rel="stylesheet">
     <link href="{% static 'registration/css/login.css' %}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e50979f189.js" crossorigin="anonymous"></script>
 </head>
