--- a/Carmax/registration/static/registration/css/login.css
+++ b/Carmax/registration/static/registration/css/login.css
@@ -59,7 +59,7 @@ border-radius: 20px;
     text-decoration: none;
     font-size: 0.8em;
     line-height: 2em;
-    color: darkgrey
+    color: blue
 }
 
 .login-box a:hover {
