--- a/Carmax/core/static/core/css/header.css
+++ b/Carmax/core/static/core/css/header.css
@@ -37,7 +37,17 @@ header{
     font-family: "Open Sans", sans-serif;
     color: white;
 }
-.navigation a, a:link, a:visited, a:focus, a:hover, a:active{
+.navigation a, 
+.navigation a:link, 
+.navigation a:visited, 
+.navigation a:focus, 
+.navigation a:hover, 
+.navigation a:active{
+    color:white;
+    text-decoration:none; 
+  }
+
+a, a:link, a:visited,  a:focus, a:hover, a:active{
     color:white;
     text-decoration:none; 
   }
