--- a/Carmax/core/templates/core/landing.html
+++ b/Carmax/core/templates/core/landing.html
@@ -24,7 +24,7 @@
    <div class ="servicios-content">
        <h3>Nuestros servicios</h3>
    </div>
-   <div class="row">
+   <div class="row service" >
        <div class="col-md-3">
            <h5>Cambio de aceite</h5>
            <img src="{% static 'core/img/cambio-aceite.jpg' %}" alt="Cambio aceite">
