--- a/Carmax/registration/static/registration/css/registration.css
+++ b/Carmax/registration/static/registration/css/registration.css
@@ -16,11 +16,16 @@
     justify-content: center;
     text-align: center;
     background: #10143A;
+    padding: 10px;
     border: 1px solid black
 }
 .registration-box h3{
     margin-top: 3%;
     font-weight: bold;
+}
+.registration-box p{
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .registration-box label{
     margin: 0;
@@ -40,7 +45,6 @@ width: 95%;
     background: transparent;
     border-bottom: 1px solid #fff;
     outline: none;
-    height: 40px;
     color: white;
     font-size: 1em;
 }
@@ -56,4 +60,15 @@ width: 95%;
     height: 2.5em;
     font-size: 1.2em;
     border-radius: 20px;
+}
+.registration-box a, 
+.registration-box a:link, 
+.registration-box a:visited, 
+.registration-box a:focus, 
+.registration-box a:hover, 
+.registration-box a:active{
+    text-decoration: none;
+    font-size: 0.8em;
+    line-height: 2em;
+    color: blue
 }
