--- a/Carmax/registration/templates/registration/password_reset_complete.html
+++ b/Carmax/registration/templates/registration/password_reset_complete.html
@@ -2,15 +2,12 @@
 {% load static %}
 {% block title %}Restablecimiento de contraseña completado{% endblock %}
 {% block content %}
-<main role="main">
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-9 mx-auto mb-5">
-        <h3 class="mb-4">Restablecimiento de contraseña completado  </h3>
-        <p>Su contraseña ha sido establecida. Ahora puede seguir adelante e iniciar sesión.</p>
+  <div class="registration">
+    <div class="registration-box">
+        <h3>Restablecimiento de contraseña completado  </h3>
+        <p>Su contraseña ha sido establecida. <br>
+        Ahora puede seguir adelante e iniciar sesión.</p>
         <p><a href="{% url 'login' %}">Iniciar sesión</a></p>
-      </div>
     </div>
   </div>
-</main>
 {% endblock %}
