--- a/Carmax/registration/templates/registration/password_reset_done.html
+++ b/Carmax/registration/templates/registration/password_reset_done.html
@@ -2,15 +2,15 @@
 {% load static %}
 {% block title %}Restablecimiento de contraseña enviado{% endblock %}
 {% block content %}
-<main role="main">
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-9 mx-auto mb-5">
-        <h3 class="mb-4">Restablecimiento de contraseña enviado</h3>
-        <p>Le hemos enviado por email las instrucciones para restablecer la contraseña, si es que existe una cuenta con la dirección electrónica que indicó. Debería recibirlas en breve.</p>
-        <p>Si no recibe un correo, por favor asegúrese de que ha introducido la dirección de correo con la que se registró y verifique su carpeta de spam.</p>
-      </div>
+<div class="registration">
+    <div class="registration-box">
+        <h3>Restablecimiento de contraseña enviado</h3>
+        <p>Le hemos enviado por email las instrucciones para restablecer<br>
+        la contraseña, si es que existe una cuenta con la dirección<br> 
+        electrónica que indicó. Debería recibirlas en breve.</p>
+        <p>Si no recibe un correo, por favor asegúrese <br>
+        de que ha introducido la dirección de correo con<br> 
+        la que se registró y verifique su carpeta de spam.</p>
     </div>
-  </div>
-</main>
+</div>
 {% endblock %}
