Se agregan modelos y intento de reserva

--- a/Carmax/core/templates/core/base.html
+++ b/Carmax/core/templates/core/base.html
@@ -25,7 +25,8 @@
           <nav class="navigation">
             <ul>
               <li><a href="#nosotros">Nosotros</a></li>
-              <li><a href="{% url 'servicios' %}">Servicios</a></li>
+              <!-- <li><a href="{% url 'servicios' %}">Servicios</a></li> -->
+              <li><a href="#servicios">Servicios</a></li>
               {% if not request.user.is_authenticated %}
               <li><a href="{% url 'login' %}">Ingresar</a></li>
               <li><a href="{% url 'signup' %}">Registrarse</a></li>
