--- a/Carmax/core/static/core/css/header.css
+++ b/Carmax/core/static/core/css/header.css
@@ -27,15 +27,15 @@ header{
     font-size: 2.3em;
 }
 .navigation ul{
-    width: 110%;
+    width: 100%;
     list-style: none;
-    padding: 0;
 }
 .navigation ul li{
     margin-right: 1%;
     display: inline-block;
     font-family: "Open Sans", sans-serif;
     color: white;
+    padding: 7px;
 }
 .navigation a, 
 .navigation a:link, 
