--- a/Carmax/core/templates/core/cancel_turn_view.html
+++ b/Carmax/core/templates/core/cancel_turn_view.html
@@ -3,6 +3,9 @@
 {% block title %}Cancelar turno{% endblock %}
 
 {% block content %}
+{% if not  request.user.is_staff and not request.user == turn.user %}
+<meta http-equiv="REFRESH" content="0;url=http://127.0.0.1:8000/">
+{% endif %}
 <div class="cancel-turn">
     <form action="" method="POST">
         {% csrf_token %}
